--- a/docs/数据库.md
+++ b/docs/数据库.md
@@ -85,8 +85,48 @@
 
   https://blog.codinglabs.org/articles/theory-of-mysql-index.html
 
-### 【阿里】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 33)
-### 【腾讯】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 31)
+### 【8星】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 33)
+
++ 事务隔离级别主要有四种
+
+  + 读未提交 (READ UNCOMMITED)
+    + 定义：一个事务可以读取另一个事务已修改但未提交的数据
+    + 存在的问题
+      + 脏读
+      + 不可重复读
+      + 幻读
+  + 读已提交 (READ COMMITED)
+    + 定义：一个事务只能读取另一个事务已经提交的数据
+    + 存在的问题
+      + 不可重复读
+      + 幻读
+  + 可重复读 (REPEATABLE READ)（Mysql 默认隔离级别）
+    + 定义：在一个事务中多次读取同一条记录，结果一致，无论其他事务是否对这条记录做了修改
+    + 存在的问题
+      + 幻读
+  + 串行 (SERIALIZABLE)
+    + 定义：所有事务顺序执行
+    + 不存在脏读、不可重复读、幻读等问题
+
++ 释义
+
+  + 脏读
+    + 定义： 一个事务读到另一个事务已修改未提交的数据，如果前一个事务回滚，这个数据是错误的。或者在前一个事务修改之前读到了数据
+  + 不可重复读
+    + 定义：一个事务修改某一条数据，另一个事务在前一个事务提交之前读到的是修改前的数据，等前一个事务提交之后，读到的又是修改后的数据，造成两次读取同一条数据不一致
+  + 幻读
+    + 定义：某个表初始有三条数据，在一个事务中插入一条数据，另一个事务读到的也是三条数据，但是在前一个事务提交后，读到的应是4条。
+
++ 优缺点
+
+  隔离级别从上到下，并发性能越来越差，但对于数据的隔离性一致性保证程度越好
+
++ 参考
+
+  https://blog.csdn.net/qq_41907991/article/details/107717419?utm_source=app
+
+  https://blog.csdn.net/u013256816/article/details/103966510?utm_source=app
+
 ### 【阿里】简述乐观锁以及悲观锁的区别以及使用场景 (times: 26)
 ### 【腾讯】什么是数据库事务，MySQL 为什么会使用 InnoDB 作为默认选项 (times: 25)
 ### 【腾讯】简述乐观锁以及悲观锁的区别以及使用场景 (times: 21)
@@ -181,8 +221,6 @@
 ### 【美团】简述事务的四大特性 (times: 17)
 ### 【腾讯】唯一索引与普通索引的区别是什么？使用索引会有哪些优缺点？ (times: 17)
 ### 【京东】简述乐观锁以及悲观锁的区别以及使用场景 (times: 17)
-### 【京东】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 16)
-### 【字节跳动】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 16)
 ### 【阿里】简述 Redis 持久化中 rdb 以及 aof 方案的优缺点 (times: 16)
 ### 【美团】简述 Redis 持久化中 rdb 以及 aof 方案的优缺点 (times: 14)
 ### 【美团】简述 Redis 的线程模型以及底层架构设计 (times: 14)
@@ -199,11 +237,9 @@
 ### 【字节跳动】简述 Redis 持久化中 rdb 以及 aof 方案的优缺点 (times: 12)
 ### 【字节跳动】Redis 如何实现分布式锁？ (times: 12)
 ### 【字节跳动】简述 Redis 的哨兵机制 (times: 12)
-### 【Shopee】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 12)
 ### 【滴滴】联合索引的存储结构是什么？ (times: 11)
 ### 【腾讯】Redis 如何实现延时队列，分布式锁的实现原理 (times: 11)
 ### 【京东】什么情况下会发生死锁，如何解决死锁？ (times: 11)
-### 【美团】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 11)
 ### 【字节跳动】简述 Redis 中如何防止缓存雪崩和缓存击穿 (times: 11)
 ### 【Shopee】为什么 Redis 在单线程下能如此快？ (times: 11)
 ### 【美团】简述 Redis 的过期机制和内存淘汰策略 (times: 11)
@@ -228,7 +264,6 @@
 ### 【快手】什么情况下会发生死锁，如何解决死锁？ (times: 7)
 ### 【美团】B+ 树叶子节点存储的是什么数据 (times: 7)
 ### 【滴滴】简述 Redis 中如何防止缓存雪崩和缓存击穿 (times: 6)
-### 【百度】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 6)
 ### 【百度】简述 MySQL 三种日志的使用场景 (times: 6)
 ### 【百度】简述 redis 的通信模型 (times: 6)
 ### 【字节跳动】简述脏读和幻读的发生场景，InnoDB 是如何解决幻读的？ (times: 6)
@@ -244,12 +279,81 @@
 ### 【京东】MySQL 联合索引底层原理是什么？ (times: 5)
 ### 【Shopee】什么情况下会发生死锁，如何解决死锁？ (times: 5)
 ### 【快手】简述常见的负载均衡算法 (times: 5)
-### 【快手】数据库的事务隔离级别有哪些？各有哪些优缺点？ (times: 5)
-### 【腾讯】简述数据库中的 ACID 分别是什么？ (times: 5)
+### 【4星】简述数据库中的 ACID 分别是什么？ (times: 5)
+
++ ACID
+
+  + 原子性
+    + 定义：每个事务都是不可分割的最小工作单元，事务中的所有操作要么全成功，要么全失败
+  + 一致性
+    + 定义：比如A向B转账，A减少1000，B就得增加1000，两人的余额总和不能变
+  + 隔离性
+    + 定义：各个事务之间相互隔离，互不干扰
+  + 持久性
+    + 定义：事务一旦提交，数据会永久的存储在数据库中
+
++ 实现原理
+
+  + redo log
+
+    + 定义： 包含redo log buffer（内存）和redo log file（磁盘），**记录事务执行过程中数据修改后物理数据页面的信息**。后台线程会将buffer中的数据同步到磁盘。
+
+    + 流程图
+
+      ![](../images/redolog.png)
+
+    + 作用
+
+      + 当mysql宕机时，如果buffer中还有数据没有同步到磁盘，可通过redo log 进行恢复（所以叫重做日志）。
+      + 确保事务的**持久性**
+
+    + 什么时候开始写redolog？什么时候释放redolog？
+
+      + 当事务开始时就会写redolog
+      + 当buffer中的数据页同步到磁盘后，redolog就会被释放重用。
+
+    + 既然写redolog也有磁盘IO消耗，为什么不直接将数据写入磁盘呢？
+
+      + 直接写磁盘是随机IO，写redolog是顺序IO，顺序IO比随机IO性能好。
+      + 因为mysql加载数据到内存，最小单位是页，所以即使有很小的改动，也会将整页更新，造成大量无效IO。而redolog只包含真正要写入的部分
+
+  + undo log
+
+    + 定义：记录数据被修改前的信息（记录**逆操作**），用于回滚操作
+    + 作用
+      + 用于回滚事务的操作
+      + 保证事务的**原子性**
+
+  + 读写锁
+
+    + 读锁（共享锁）
+      + 定义：多个事务可以并发的读同一条数据，但不能同时写同一条数据
+    + 写锁（排它锁）
+      + 定义：一个事务拿到写锁之后，其他事务不能读也不能写这条数据
+
+  + MVCC（Multi-Version Concurrency Control）多版本并发控制
+
+    + 隐藏字段（mysql在创建表时，会为每张表创建几个隐藏字段）
+
+      + row_id：行记录的唯一标志
+      + transaction_id：事务id
+      + roll_pointer：回滚指针，指向对应的undo log，用于回滚。
+
+    + 作用
+
+      + 提高并发性能，不需要加锁，处理读写冲突，利于读多写少的场景
+
+    + 原理
+
+      + 同一份数据为每个事务生成一个版本（由隐藏字段实现），每个事务只能读特定版本的数据（类似快照）
+      + 不需要使用锁
+      + 读与读之间不影响
+
+      
+
 ### 【京东】什么是 SQL 注入攻击？如何防止这类攻击？ (times: 5)
 ### 【阿里】数据库索引的实现原理是什么？ (times: 5)
 ### 【京东】数据库有哪些常见索引？数据库设计的范式是什么？ (times: 5)
-### 【百度】简述数据库中的 ACID 分别是什么？ (times: 5)
 ### 【腾讯】Kafka 发送消息是如何保证可靠性的？ (times: 4)
 ### 【快手】Redis 有几种数据结构？Zset 是如何实现的？ (times: 4)
 ### 【阿里】为什么 Redis 在单线程下能如此快？ (times: 4)
@@ -258,7 +362,6 @@
 ### 【字节跳动】Redis 中 key 的过期策略有哪些？ (times: 4)
 ### 【字节跳动】简述 Redis 中常见类型的底层数据结构 (times: 4)
 ### 【百度】什么情况下会发生死锁，如何解决死锁？ (times: 4)
-### 【字节跳动】简述数据库中的 ACID 分别是什么？ (times: 4)
 ### 【Shopee】数据库有哪些常见索引？数据库设计的范式是什么？ (times: 3)
 ### 【字节跳动】并发事务会引发哪些问题？如何解决？ (times: 3)
 ### 【字节跳动】简述 MySQL 三种日志的使用场景 (times: 3)
@@ -273,7 +376,6 @@
 ### 【滴滴】假设建立联合索引 (a, b, c) 如果对字段 a 和 c 查询，会用到这个联合索引吗？ (times: 2)
 ### 【Shopee】Redis 中，sentine l和 cluster 的区别和适用场景是什么？ (times: 2)
 ### 【阿里】简述 Redis 中跳表的应用以及优缺点 (times: 2)
-### 【Shopee】简述数据库中的 ACID 分别是什么？ (times: 2)
 ### 【Shopee】什么是数据库事务，MySQL 为什么会使用 InnoDB 作为默认选项 (times: 2)
 ### 【快手】如何解决 TCP 传输丢包问题？ (times: 2)
 ### 【阿里】Redis 中，sentine l和 cluster 的区别和适用场景是什么？ (times: 1)
