--- a/docs/数据库.md
+++ b/docs/数据库.md
@@ -284,13 +284,13 @@
 + ACID
 
   + 原子性
-    + 定义：每个事务都是不可分割的最小工作单元，事务中的所有操作要么全成功，要么全失败
+    + 定义：每个事务都是不可分割的最小工作单元，事务中的所有操作要么全成功，要么全失败。使用**undo log**实现回滚。
   + 一致性
-    + 定义：比如A向B转账，A减少1000，B就得增加1000，两人的余额总和不能变
+    + 定义：比如A向B转账，A减少1000，B就得增加1000，两人的余额总和不能变。
   + 隔离性
-    + 定义：各个事务之间相互隔离，互不干扰
+    + 定义：各个事务之间相互隔离，互不干扰。通过**锁和MVCC**实现隔离
   + 持久性
-    + 定义：事务一旦提交，数据会永久的存储在数据库中
+    + 定义：事务一旦提交，数据会永久的存储在数据库中。使用**redo log**实现故障恢复。
 
 + 实现原理
 
