--- a/docs/分布式.md
+++ b/docs/分布式.md
@@ -24,3 +24,31 @@
 + 如果(1)由于网络波动超时，本地事务回滚没有问题
 + 如果(2)由于数据库慢查询处理超时，订单服务也会收到超时的错误，此时本地事务回滚，可能会有问题，因为钱包服务有可能处理成功
 + 如果(3)由于网络波动超时，则订单服务会发生本地事务回滚，但实际钱包服务已处理成功，造成数据不一致。
+
+
+
+### 为什么不能将写入MQ与数据库操作放在一起实现分布式事务？
+
+```
+[订单微服务请求钱包微服务进行扣款并更新订单状态]
+
+处理订单微服务请求钱包微服务进行扣款并更新订单状态方法(){
+
+    [开启事务]
+
+    1、查询订单
+
+    2、推送钱包微服务扣款消息(推送消息)
+
+    3、更新订单状态为扣款成功
+
+    [提交事务]
+
+}
+```
+
+
+
++ 如果mq异常则一段时间内所有事务都会被回滚
++ 如果由于网络波动或网路阻塞写入mq超时，那么事务回滚，但是等网络恢复后，消息可能已经写入成功了，造成数据不一致
++ 如果3失败，则2无法回滚
